--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+h1,h2,h3,h4,h5,h6,p,li,ul,a,div,span,button{
+  font-family: 'Poppins', sans-serif !important;
+}
+/* Reset  */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* root variable */
+:root {
+  --color-primary: #0284C7;
+  --color-primary-light: #ff7a50;
+  --color-secondary-light: #fff6f2;
+  --color-secondary-dark: #ffa589;
+  --color-navbar: #f8f8f8;
+  --color-headings: #263b5e;
+  --color-body: #333333;
+  --color-white: #fff;
+  --avatar-size: 50px;
+  --backround-color-body : #f7fdfc;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+html {
+  font-size: 62.5%;
+}
+body {
+  background: var(--backround-color-body);
+  color: var(--color-body);
+  font-size: 1.4rem;
+  line-height: 1.7;
+}
+html,
+body,
+p {
+  text-size-adjust: none !important;
+  -webkit-text-size-adjust: none !important;
+  -moz-text-size-adjust: none !important;
+  -ms-text-size-adjust: none !important;
+}
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.8rem;
+  }
+  h1 {
+    font-size: 5rem;
+  }
+  h2 {
+    font-size: 3.5rem;
+    margin-bottom: 3.5rem;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn--primary {
+  background-color: var(--color-primary);
+  color: var(--color-white);
 }
 
-.App-link {
-  color: #61dafb;
+.btn--secondary {
+  background-color: var(--color-secondary-dark);
+  color: var(--color-white);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.btn--block {
+  width: 100%;
+  font-size: 1.6rem;
+}
+
+.btn-lg{
+  padding: 14px 40px;
+  cursor: pointer;
+}
+@media screen and (min-width: 1024px) {
+  .btn {
+    font-size: 1.6rem;
+    box-shadow: 0 2px 12px 0 rgba(0,0,0,.2);
   }
-  to {
-    transform: rotate(360deg);
+  .btn--block {
+    font-size: 2rem;
   }
+}
+.container {
+  max-width: 1250px;
+  margin: 0 auto;
 }
