--- a/src/pages/HomePage/homepage.css
+++ b/src/pages/HomePage/homepage.css
@@ -15,6 +15,12 @@
   display: none;
 }
 @media screen and (max-width: 992px) {
+  .market_overview{
+    flex-direction: column;
+  }
+  .MiniChart{
+    margin-top: 30px;
+  }
   .chart-desktop{
     display: none !important;
   }
@@ -162,7 +168,7 @@
 .market_overview {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 }
 .tickertape{
   margin-top: 120px;
